[package]
name = "v2ex-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.22.0", features = ["all-widgets", "macros"] }
crossterm = "0.26.1"
reqwest = {version = "0.11.18"}
anyhow = "1.0.71"
scraper = "0.17.1"
tokio = {version = "1.28.2", features = ["full"]}
chrono = "0.4.26"
open = "2.1.1"